styleNowyIndex.css
@import url("https://fonts.googleapis.com/css?family=Raleway");

:root {
  --shadow-color: rgb(68, 68, 68);
}

.first_page_body {
  height: 100%;
  width: 100%;
  margin: 0;
  font-family: "Raleway", sans-serif;
}

.ongate {
  display: flex;
  flex-direction: column;
  height: 100%;
  width: 100%;
  align-items: center;
  justify-content: center;
}

.freePalceUp {
  height: 50px;
}

.firstelement {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  /* border: 2px solid peru; */
  animation: slideup 2s forwards 7s, slidedown 16s forwards 3.5s;
  /* animation: slideup 2s forwards; */
  height: 10px;
}

@keyframes slideup {
  from {
    margin-top: 0;
  }

  to {
    margin-top: -18%;
  }
}

@keyframes slidedown {
  from {
    height: 100px;
  }

  to {
    height: auto;
  }
}

.gates {
  display: flex;
  flex-direction: column;
  justify-content: center;
  animation: marginal 2s 6s forwards;
  /* margin-bottom: 50px; */
  margin-right: -320px;
  /* border: 2px solid peru; */
}

@keyframes marginal {
  from {
    margin-right: -320px;
  }

  to {
    margin-right: 300px;
  }
}

.photoCV {
  /* position: relative; */
  opacity: 0;
}
.photoCV img {
  height: 320px;
}
.w3-animate-right {
  animation: animateright 3s forwards 7s;
}
@keyframes animateright {
  from {
    right: -300px;
    opacity: 0;
  }
  to {
    right: 0;
    opacity: 1;
  }
}

.line {
  position: relative;
  margin: 0 auto;
  /* border-right: 2px solid rgba(255, 255, 255, 0.75); */
  text-align: center;
  white-space: nowrap;
  overflow: hidden;
  /* transform: translateY(-40%); */
}

.line-1 {
  font-size: 500%;
}

/* Animation */
.anim-typewriter {
  animation: typewriter 1s steps(10) 1s 1 normal both,
    blinkTextCursor 500ms steps(10, end) infinite normal;
}
@keyframes typewriter {
  from {
    width: 0;
  }
  to {
    width: 3em;
  }
}
@keyframes blinkTextCursor {
  from {
    border-right-color: rgba(37, 37, 37, 0.75);
  }
  to {
    border-right-color: transparent;
  }
}

.line-2 {
  font-size: 150%;
  margin-top: 15px;
}

.anim-typewriter2 {
  animation: typewriter2 1.5s steps(15) 3.5s 1 normal both,
    blinkTextCursor 500ms steps(15) infinite normal;
}
@keyframes typewriter2 {
  from {
    width: 0;
  }
  to {
    width: 6em;
  }
}

.line-3 {
  font-size: 320%;
  margin-top: 15px;
}

.anim-typewriter3 {
  animation: typewriter3 2s steps(24) 4.9s 1 normal both,
    blinkTextCursor 500ms steps(24) infinite normal;
}
@keyframes typewriter3 {
  from {
    width: 0;
  }
  to {
    width: 6em;
  }
}

.secondelement {
  display: flex;
  flex-direction: column;
  /* border: 2px solid peru; */
  height: auto;
}

.undergatesText {
  position: relative;
  margin: 0 auto;
  /* transform: translateY(2140%); */
  /* border-right: 2px solid rgba(255, 255, 255, 0.75); */
  text-align: center;
  white-space: nowrap;
  overflow: hidden;
  font-family: "Raleway", sans-serif;
  font-size: 140%;
}

.anim-typewriter4 {
  animation: typewriter4 2s steps(64) 11s 1 normal both,
    blinkTextCursor 500ms steps(10) infinite normal;
}

.anim-typewriter5 {
  animation: typewriter5 2s steps(64) 13s 1 normal both,
    blinkTextCursor 500ms steps(10) infinite normal;
}
.anim-typewriter6 {
  animation: typewriter6 0.5s steps(34) 14.5s 1 normal both,
    blinkTextCursor 500ms steps(10) infinite normal;
}
.anim-typewriter7 {
  animation: typewriter7 2s steps(64) 16.5s 1 normal both,
    blinkTextCursor 500ms steps(10) infinite normal;
}

@keyframes typewriter4 {
  from {
    width: 0;
  }
  to {
    width: 35em;
  }
}
@keyframes typewriter5 {
  from {
    width: 0;
  }
  to {
    width: 35em;
  }
}

@keyframes typewriter6 {
  from {
    width: 0;
  }
  to {
    width: 7em;
  }
}

@keyframes typewriter7 {
  from {
    width: 0;
  }
  to {
    width: 30em;
  }
}

.buttonIndex {
  /* opacity: 0; */
  display: flex;
  justify-content: center;
  align-items: center;
  /* margin-bottom: -200px; */
  /* border: 2px solid rgb(106, 63, 205); */
  margin-bottom: -200px;
  height: 0;
  width: 90%;
}

.textButtonIndex {
  /* margin-top: 50px; */
  /* border: 2px solid peru; */
  /* padding-bottom: 100px; */
  margin-right: -85%;
  opacity: 0;
}

.w3-animate-bottom {
  position: relative;
  animation: animatebottom 2s forwards 9s;
}
@keyframes animatebottom {
  from {
    margin-top: -300px;
    opacity: 0;
  }
  to {
    margin-top: 100px;
    opacity: 1;
  }
}

@media screen and (max-width: 1200px), screen and (max-height: 600px) {
  .photoCV img {
    height: 250px;
  }
  .gates {
    margin-right: -250px;
  }
  @keyframes marginal {
    from {
      margin-right: -250px;
    }

    to {
      margin-right: 200px;
    }
  }
  .line-1 {
    font-size: 350%;
  }

  .line-2 {
    font-size: 110%;
    margin-top: 15px;
  }

  .line-3 {
    font-size: 250%;
    margin-top: 15px;
  }
  .undergatesText {
    font-size: 110%;
  }
}

@media screen and (max-width: 800px) {
  .photoCV img {
    height: 200px;
  }
  .gates {
    margin-right: -200px;
  }
  @keyframes marginal {
    from {
      margin-right: -200px;
    }

    to {
      margin-right: 120px;
    }
  }
  @keyframes slideup {
    from {
      margin-top: 0;
    }

    to {
      margin-top: -35%;
    }
  }
  .freePalceUp {
    height: 90px;
  }
}

@media screen and (max-width: 640px) {
  .photoCV img {
    height: 180px;
  }
  .gates {
    margin-right: -180px;
  }
  @keyframes marginal {
    from {
      margin-right: -180px;
    }

    to {
      margin-right: 80px;
    }
  }
  /* .line-1 {
    font-size: 170%;
  }

  .line-2 {
    font-size: 80%;
    margin-top: 15px;
  }

  .line-3 {
    font-size: 150%;
    margin-top: 15px;
  } */

  .undergatesText {
    font-size: 100%;
  }
  .textButtonIndex {
    margin-right: -70%;
  }
}

@media screen and (max-width: 550px) {
  .firstelement {
    display: flex;
    flex-direction: column;
  }

  .gates {
    margin-right: 0;
    margin-bottom: 30px;
  }
  @keyframes marginal {
    from {
      margin-right: 0;
    }

    to {
      margin-right: 0;
    }
  }
  @keyframes animateright {
    from {
      right: 0;
      opacity: 0;
    }
    to {
      right: 0;
      opacity: 1;
    }
  }
  @keyframes slideup {
    from {
      margin-top: 0;
    }

    to {
      margin-top: -70%;
    }
  }
  .undergatesText {
    display: none;
  }
  .textButtonIndex {
    margin-right: 0;
  }
}

